[gd_scene format=3 uid="uid://4o2jn7lvf5ph"]

[ext_resource type="Theme" uid="uid://be30gaya8c5ly" path="res://assets/hud/Theme.tres" id="1_0b1cv"]
[ext_resource type="Script" uid="uid://ddiwqo5kd6r3w" path="res://script/ui/setting_menu.gd" id="1_mhswj"]
[ext_resource type="Texture2D" uid="uid://biicvll1v04ba" path="res://assets/hud/Sans_titre_429_20260224150002.png" id="1_qwcqe"]
[ext_resource type="Texture2D" uid="uid://vmug3ssx0wcb" path="res://assets/hud/UI_Credits.png" id="3_x3vyp"]

[node name="SettingsMenu" type="Control" unique_id=1977151436]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0b1cv")
script = ExtResource("1_mhswj")

[node name="Background" type="TextureRect" parent="." unique_id=80299960]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_qwcqe")
stretch_mode = 1

[node name="SETTINGS" type="Label" parent="." unique_id=1239046367]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 200
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=370370866]
z_index = 9
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = -267.5
offset_right = 455.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1795084331]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Music" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=1199396877]
custom_minimum_size = Vector2(2.05, 0)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="_Music_" type="Label" parent="HBoxContainer/VBoxContainer/Music" unique_id=2011356034]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Music"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/Music" unique_id=452254913]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SFX" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=272435811]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/SFX" unique_id=2122824456]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SFX"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/SFX" unique_id=771669931]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Reset to default" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1788129171]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Reset to Default"

[node name="Back" type="TextureButton" parent="HBoxContainer/VBoxContainer" unique_id=1257197359]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_x3vyp")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Back" unique_id=256516679]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -24.5
offset_right = 52.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer" unique_id=1565951706]
layout_mode = 2

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Music/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SFX/HSlider" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Reset to default" to="." method="_on_reset_to_default_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
